# tinycore-randomx

./: Cargo.toml  README.md  install.sh  main.rs  monitor
.github/workflows/: build.yml
src/: main.rs  state.rs  ui.rs
