[package]
name = "miner_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
chrono = "0.4"
# Plain-text localhost HTTP requests (no OpenSSL/C dependencies)
reqwest = { version = "0.11", features = ["blocking", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FIXED: Added the missing libc crate for terminal feature detection
libc = "0.2"
